[tool.poetry]
name = "aws-cert-syncer"
version = "0.1.0"
description = ""
authors = ["Koen Vossen <info@koenvossen.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.38.38"
pyyaml = "^6.0"
cryptography = "^41.0.0"
schedule = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
